--- a/projeto Strata/index.html
+++ b/projeto Strata/index.html
@@ -83,7 +83,7 @@
                 
                  <article class="recent-works-card">
                     <a href="fulls/05.jpg">
-                        <img src="thumbs/05.jpg" title="descrição">
+                        <img src="thumbs/05.jpg" alt="descrição"> ---
                     </a>
                     <p class="recent-works-card-title">Nunc enim commodo aliquet</p>
                     <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
