--- a/projeto Strata/index.html
+++ b/projeto Strata/index.html
@@ -4,8 +4,8 @@
     <head>
         <title> Projeto Strata </title>
         <meta charset="utf-8">
-        <meta name="author" content="Daniel">
-        <meta name="description" content="descrição bacanuda">
+        <meta name="author" content="">
+        <meta name="description" content="descrição">
         <meta name="keywords" content="html5, tecnologia">
         <script src="https://kit.fontawesome.com/f2d1fd2929.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
